# mono-upnp

./: .gitignore  AUTHORS  COPYING  ChangeLog  HACKING  Makefile.am  Makefile.include  Mono.Ssdp.sln  Mono.Upnp.sln  README  README.md  autogen.sh  configure.ac  shamrock.m4
src/: Makefile.am  Makefile.include  mono-ssdp.snk
src/Mono.Ssdp/: Makefile.am  Makefile.include  Mono.Ssdp.csproj  mono-ssdp.pc.in  policy.config.in
src/Mono.Ssdp.ConsoleClient/: Makefile.am  Mono.Ssdp.ConsoleClient.csproj
src/Mono.Ssdp.ConsoleClient/Mono.Ssdp.ConsoleClient/: ConsoleClient.cs
src/Mono.Ssdp/Mono.Ssdp/: AssemblyInfo.cs  AssemblyInfo.cs.in  BrowseService.cs  Browser.cs  ChangeLog  Client.cs  Makefile.am  Mono.Ssdp.csproj  Mono.Ssdp.make  MulticastReader.cs  Service.cs  mono.ssdp.pc.in
src/Mono.Ssdp/Mono.Ssdp.ConsoleClient/: ChangeLog  Makefile.am  Mono.Ssdp.ConsoleClient.csproj  mssdp-client.in
src/Mono.Ssdp/Mono.Ssdp.ConsoleServer/: ChangeLog  Mono.Ssdp.ConsoleServer.csproj
src/Mono.Ssdp/Mono.Ssdp.ConsoleServer/Mono.Ssdp.ConsoleServer/: ConsoleServer.cs
src/Mono.Ssdp/Mono.Ssdp.Internal/: AsyncReceiveBuffer.cs  NotifyListener.cs  Protocol.cs  ServiceCache.cs  SsdpSocket.cs  TimerDispatcher.cs
src/Mono.Ssdp/Mono.Ssdp/Mono.Ssdp/: Announcer.cs  BrowseService.cs  Browser.cs  Client.cs  MulticastReader.cs  Server.cs  ServiceArgs.cs  ServiceHandler.cs  ServiceOperation.cs  ServiceOptions.cs
src/Mono.Ssdp/Mono.Ssdp/Mono.Ssdp.Internal/: AsyncReceiveBuffer.cs  HttpDatagram.cs  HttpDatagramType.cs  Log.cs  MulticastSsdpSocket.cs  NetworkInterfaceInfo.cs  NotifyListener.cs  Protocol.cs  RequestListener.cs  ServiceCache.cs  SsdpSocket.cs  TimeoutDispatcher.cs
src/Mono.Upnp/: Makefile.am
src/Mono.Upnp.Dcp/Mono.Upnp.Dcp.MediaServer/Mono.Upnp.Dcp.MediaServer1.Client/: ChangeLog  Mono.Upnp.Dcp.MediaServer1.Client.csproj
src/Mono.Upnp.Dcp/Mono.Upnp.Dcp.MediaServer/Mono.Upnp.Dcp.MediaServer1.Server/: ChangeLog
src/Mono.Upnp.Dcp/Mono.Upnp.Dcp.MediaServer1/: AssemblyInfo.cs  Makefile.am  Mono.Upnp.Dcp.MediaServer1.csproj
src/Mono.Upnp.Dcp/Mono.Upnp.Dcp.MediaServer1/Mono.Upnp.Dcp.MSMediaReceiverRegistrar1/: AssemblyInfo.cs  Makefile.am  Mono.Upnp.Dcp.MSMediaReceiverRegistrar1.csproj  mono.upnp.dcp.msmediareceiverregistrar1.pc.in
src/Mono.Upnp.Dcp/Mono.Upnp.Dcp.MediaServer1/Mono.Upnp.Dcp.MSMediaServerRegistrar1/: AssemblyInfo.cs  Mono.Upnp.Dcp.MSMediaServerRegistrar1.csproj
src/Mono.Upnp.Dcp/Mono.Upnp.Dcp.MediaServer1/Mono.Upnp.Dcp.MediaServer1/: AssemblyInfo.cs  ConnectionManager1.cs  ConnectionManager1Client.cs  ConnectionStatus.cs  Makefile.am  MediaServer.cs  MediaServerSettings.cs  (+3 more)
src/Mono.Upnp.Dcp/Mono.Upnp.Dcp.MediaServer1/Mono.Upnp.Dcp.MediaServer1.ConnectionManager1/: .ConnectionManager1~.cs  ConnectionManager.cs  ConnectionManagerClient.cs  ConnectionStatus.cs
src/Mono.Upnp.Dcp/Mono.Upnp.Dcp.MediaServer1/Mono.Upnp.Dcp.MediaServer1.ContentDirectory1/: BrowseResults.cs  Class.cs  ClassManager.cs  ClassReference.cs  Container.cs  ContainerBuilder.cs  ContentDirectory.cs  ContentDirectoryClient.cs  ContentDirectoryController.cs  Deserializer.cs  Item.cs  ItemBuilder.cs  Object.cs  ObjectBasedContentDirectory.cs  ObjectBuilder.cs  Resolution.cs  Resource.cs  ResourceBuilder.cs  Results.cs  Schemas.cs  SearchResults.cs  WriteStatus.cs
src/Mono.Upnp.Dcp/Mono.Upnp.Dcp.MediaServer1/Mono.Upnp.Dcp.MediaServer1.ContentDirectory1.AV/: Album.cs  AlbumBuilder.cs  AudioBook.cs  AudioBookBuilder.cs  AudioBroadcast.cs  AudioBroadcastBuilder.cs  AudioItem.cs  AudioItemBuilder.cs  Genre.cs  GenreBuilder.cs  ImageItem.cs  ImageItemBuilder.cs  Movie.cs  MovieBuilder.cs  MovieGenre.cs  MovieGenreBuilder.cs  MusicAlbum.cs  MusicAlbumBuilder.cs  MusicArtist.cs  MusicArtistBuilder.cs  MusicGenre.cs  MusicGenreBuilder.cs  MusicTrack.cs  MusicTrackBuilder.cs  MusicVideoClip.cs  MusicVideoClipBuilder.cs  Person.cs  PersonBuilder.cs  PersonWithRole.cs  Photo.cs  PhotoAlbum.cs  PhotoAlbumBuilder.cs  PhotoBuilder.cs  PlaylistContainer.cs  PlaylistContainerBuilder.cs  PlaylistItem.cs  PlaylistItemBuilder.cs  StorageFolder.cs  StorageFolderBuilder.cs  StorageSystem.cs  (+9 more)
src/Mono.Upnp.Dcp/Mono.Upnp.Dcp.MediaServer1/Mono.Upnp.Dcp.MediaServer1.FSpot/: AssemblyInfo.cs  FSpotUpnpSidebarPage.cs  GConfConstants.cs  GConfHelper.cs  Mono.Upnp.Dcp.MediaServer1.FSpot.csproj  Upnp.addin.xml  UpnpServiceWidget.cs
src/Mono.Upnp.Dcp/Mono.Upnp.Dcp.MediaServer1/Mono.Upnp.Dcp.MediaServer1.FileSystem/: AssemblyInfo.cs  Makefile.am  Mono.Upnp.Dcp.MediaServer1.FileSystem.csproj  mono-upnp-dcp-mediaserver1-filesystem.snk  mono.upnp.dcp.mediaserver1.filesystem.pc.in
src/Mono.Upnp.Dcp/Mono.Upnp.Dcp.MediaServer1/Mono.Upnp.Dcp.MediaServer1.FileSystem.ConsoleServer/: AssemblyInfo.cs  Makefile.am  Mono.Upnp.Dcp.MediaServer1.FileSystem.ConsoleServer.csproj  mono-upnp-simple-media-server.in
src/Mono.Upnp.Dcp/Mono.Upnp.Dcp.MediaServer1/Mono.Upnp.Dcp.MediaServer1.GtkClient/: AssemblyInfo.cs  EAGLView.cs  Main.cs  MainWindow.xib  MainWindow.xib.designer.cs  Makefile.am  Mono.Upnp.Dcp.MediaServer1.GtkClient.csproj  mono.upnp.dcp.mediaserver1.gtkclient.pc.in
src/Mono.Upnp.Dcp/Mono.Upnp.Dcp.Sharpener/: ChangeLog  Mono.Upnp.Dcp.Sharpener.csproj
src/Mono.Upnp.Dcp/Mono.Upnp.Sharpener/: ChangeLog  Mono.Upnp.Dcp.Sharpener.csproj
src/Mono.Upnp.DidlLite/Mono.Upnp.DidlLite.Client/: Mono.Upnp.DidlLite.Client.csproj
src/Mono.Upnp/Mono.Upnp/: AssemblyInfo.cs  Makefile.am  Mono.Upnp.csproj  mono-upnp.snk  mono.upnp.pc.in
src/Mono.Upnp/Mono.Upnp.Client/: AssemblyInfo.cs.in  ChangeLog  Makefile.am  Mono.Upnp.Client.csproj  mono-upnp-client.pc.in
src/Mono.Upnp/Mono.Upnp.ConsoleClient/: ChangeLog  Mono.Upnp.ConsoleClient.csproj
src/Mono.Upnp/Mono.Upnp.ConsoleServer/: ChangeLog  Mono.Upnp.ConsoleServer.csproj
src/Mono.Upnp/Mono.Upnp.GtkClient/: AssemblyInfo.cs  Makefile.am  Mono.Upnp.GtkClient.csproj  app.desktop  mono-upnp-gtk.in
src/Mono.Upnp/Mono.Upnp.Server/: ChangeLog  Mono.Upnp.Server.csproj  Mono.Upnp.Server.pidb  mono-upnp-server.snk
src/Mono.Upnp/Mono.Upnp.Shared/: ChangeLog  Mono.Upnp.Shared.csproj
(+867 files in other folders)
